image directory updated
The images were not displaying on the hosted site, I had to update the directory

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </header>
   <main data-testid="main" data-testid="main">
     <div data-testid="image" class="image">
-      <img src="/asset/my_picture.jpg" alt="my slack profile picture" data-testid="slackProfilePicture"></img>
+      <img src="asset/my_picture.jpg" alt="my slack profile picture" data-testid="slackProfilePicture"></img>
       <div>
         <p>Slack Name: @Omachile</p>
         <p data-testid="slackEmail">Slack Email: elaigwumichael82@gmail.com</p>
@@ -44,12 +44,12 @@
   </main>
   <footer data-testid="footer" class="footer">
     <div data-testid="external-websites" class="links">
-      <div><a href="http://hng.tech/learn" target="_blank" data-testid="hngLink"><img src="/asset/hng.jpg"
+      <div><a href="http://hng.tech/learn" target="_blank" data-testid="hngLink"><img src="asset/hng.jpg"
             alt="HNG link"></a></div>
-      <div><a href="http://keyword.dog/" target="_blank" data-testid="keywordLink"><img src="/asset/kword.svg"
+      <div><a href="http://keyword.dog/" target="_blank" data-testid="keywordLink"><img src="asset/kword.svg"
             alt="keyword link"></a></div>
       <div><a href="http://scrapeanyweb.site/" target="_blank" data-testid="scrapeanywebLink"><img
-            src="/asset//scrape.png" alt="scrape link"></a>
+            src="asset//scrape.png" alt="scrape link"></a>
       </div>
     </div>
     <p>&copy; 2024 HNG 11 Internship. All rights reserved.</p>
